--- a/scss/common/_forms.scss
+++ b/scss/common/_forms.scss
@@ -100,6 +100,7 @@ input[type="button"] {
   outline: 0;
   overflow: visible;
   padding: 3px 10px;
+  margin-right: 3px;
   @include text-shadow(rgba(white, 0) 0 1px 1px);
   width: auto;
   &:hover {
